small fixes (#239)
* removing console log for button

* fixing search page width

fixed search page being too wide, creating unnecessary scrollbar at bottom of screen. fixed by changing .sticky in search.css. removed old console.log used to debug reset button functionality

* compressed textile image for faster loading

compressed to a 958 x 1600 webp image, taking up 422.7 kb. no noticeable difference in quality, should load quite a bit faster now.

--- a/pages/Search/Search.css
+++ b/pages/Search/Search.css
@@ -21,9 +21,9 @@
 
 .sticky {
   align-items:     center;
-  inline-size:     100vw;
+  inline-size:     100%;
   inset-inline:    0;
-  max-inline-size: 100vw;
+  max-inline-size: 100%;
   position:        sticky;
 }
 
@@ -44,8 +44,8 @@
 
 body {
   inline-size:     fit-content !important;
-  max-inline-size: 100vw;
-  min-inline-size: 100vw;
+  max-inline-size: 100vw !important;
+  min-inline-size: 100% !important;
   overflow-x:      auto !important;
 }
 
